# rview

./: .gitignore  Cargo.toml  README.md
src/: benchmark.rs  camera.rs  cli.rs  constants.rs  framebuffer.rs  main.rs  mode.rs  model.rs  obj_loader.rs  palette.rs  pipeline.rs  raster.rs  types.rs  utils.rs
src/cli/: command.rs  mod.rs
src/loaders/: gltf.rs  mod.rs  obj.rs  stl.rs
src/motion/: animation.rs  mod.rs  turntable.rs
src/preprocessors/: cam_normalizer.rs  mod.rs
