[package]
name = "rview"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
crossterm = { version = "0.29", features = ["event-stream"] }
glam = "0.33.0"
obj-rs = "0.7.4"
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"
rayon = "1.12.0"

[profile.dev.package."*"]
opt-level = 3
[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
incremental = false
debug = false
